--- a/css/index.scss
+++ b/css/index.scss
@@ -24,7 +24,20 @@ $ubuntu: "Ubuntu", sans-serif;
 body{
 	margin: 0 auto;
 	padding: 0;
-	background: #e4e4e4; //tmp
+	background-image: linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+	background-image: -o-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+	background-image: -moz-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+	background-image: -webkit-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+	background-image: -ms-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.28, rgb(237,237,237)),
+		color-stop(0.64, rgb(247,247,247)),
+		color-stop(0.87, rgb(255,255,255))
+	);
 	
 	p,h1,h2,h3,h4,h5,span{padding: 0;margin: 0;}
 
@@ -47,7 +60,9 @@ body{
 				height: 80px;
 				background:#333333;
 				border-bottom: 3px solid #232323;
-				display: table;
+				display: block;
+				position: fixed;
+				z-index: 10000;
 
 				#logo{
 					background: url(../images/marca.png) no-repeat;
@@ -155,7 +170,7 @@ body{
 					background-position: -188px 0;
 				}
 			}
-
+			// icons destaque buttons
 			.spriteDestaque{
 				width: 46px;
 				height: 57px;
@@ -188,7 +203,7 @@ body{
 
 			#firstContainer{
 				height: 350px;
-				margin: 15px 0;
+				margin: 95px 0 15px 0;
 
 
 				#paperFolding{
@@ -286,9 +301,6 @@ body{
 					width: 685px;
 					margin-left: 15px;
 					background: #e3e3e3;
-					//-webkit-box-shadow: 0 0 7px #9d9d9d;
-					//-moz-box-shadow: 0 0 7px #9d9d9d;
-					//box-shadow: 0 0 7px #9d9d9d;
 					float: left;
 					height: 100%;
 
@@ -354,7 +366,7 @@ body{
 							font-weight: normal;
 							text-shadow:1px 1px 1px #fff;
 						}
-						p{
+						article.descOfertaDetalhe{
 							color: #666;
 							text-shadow:1px 1px 1px #fff;
 							font-size: 13px;
@@ -434,8 +446,80 @@ body{
 				}
 
 			}
+			
 
-		}
-	}
+			//lista de ofertas
+			section#listaOfertas{
+				margin-top: 15px;
+				border-top: 1px dotted #b2b2b2;
+				height: auto;
+				padding-bottom: 40px;
+				display: table;
+				width: 960px;
+				#loadingImage{
+					width: 100%;
+					height: 70px;
+					background: url(../images/ajax-loader.gif) center no-repeat;
+				}
+				
+				.ofertaUnique{
+					float: left;
+					width: 228px;
+					height: 270px;
+					background:#b2b2b2;
+					margin: 15px 15px 0 0;
+					border-top: 3px solid $verde;
+
+					&:last-child{margin: 15px 0;}
+
+					.bottomBar{
+						width: 100%;
+						height: 53px;
+						position: relative;
+						z-index: 10;
+						background: #333;
+						bottom: 0;
+						top: -11px;
+						display: table;
+						
+						img{
+							width: 228px;
+							height: 228px;
+						}
+
+						.btnBar{
+							background:url(../images/sprite-mini.png) no-repeat;
+							width: 41px;
+							height: 40px;
+							float: left;
+							border: 0;
+							margin: 4px 5px;
+							padding-right: 2px;
+							@include opacityCB(4);
+							border-right: 1px solid #5b5b5b;
+
+							&:last-child{ border: 0;}
+
+							&:hover{
+								@include opacityCB(10);								
+							}
+
+							&.like{background-position: 0 0}
+
+							&.dislike{background-position: -40px 0;padding-left: 39px;}
+
+							&.share{background-position: -84px 0; padding: 0 26px;}
+
+							&.favorite{background-position: -137px 0; width: 44px;}
+						}
+					}
+
+				
+
+				}
+
+			}
+		} //container
+	}//all
 
 }
