--- a/css/index.scss
+++ b/css/index.scss
@@ -456,7 +456,7 @@ body{
 				padding-bottom: 40px;
 				display: table;
 				width: 960px;
-				#loadingImage{
+				.loadingImage{
 					width: 100%;
 					height: 70px;
 					background: url(../images/ajax-loader.gif) center no-repeat;
