--- a/css/index.scss
+++ b/css/index.scss
@@ -509,6 +509,7 @@ body{
 							h5{
 								text-align: center;
 								font-size: 21px;
+								text-shadow: 2px 2px 0 rgba(0,0,0,0.3);
 							}
 							h6{
 								font-weight: normal;
