Changing navBar destaque with 3d effects

--- a/css/index.scss
+++ b/css/index.scss
@@ -198,7 +198,7 @@ body{
 				height: 57px;
 				float: left;
 				background: url(../images/sprite-interacao.png) no-repeat;
-				@include opacityCB(4);
+				//@include opacityCB(4);
 
 				&.like{
 					background-position: 0 0;
@@ -431,82 +431,132 @@ body{
 							margin-top: 16px;
 						}
 					}
-
+					
 					#barDestaque{
-						width: 100%;
-						background:$verde;
-						height: 65px;
+						width: inherit;
+						height: 62px;
 						float: left;
+						position: relative;
+						z-index: 3;
 
 						.btnDestaque{
-							width: 127px;
-							height: 59px;
+							width: 20%;
+							// margin: 0 1%;
+							height: 62px;
 							float: left;
-							border: none; 
-							background:none; 
-							
-							&.active{
-								@include opacityCB(8);
-
-								h5{
-									color: rgba(0,0,0,0.8);	 
-								}
-							}
-
-							&:first-child{ width: 129px;}
-							&:nth-child(2){ width: 170px}
-
-							&:nth-child(3){ width: 134px}
-
-							&:nth-child(4){ width: 129px}	
-							&:last-child{
-								width: 145px;
-							}						
-
-							h5{
-								color: rgba(0,0,0,0.4);	 
-								float: left;
-								position: relative;
-								top: 19px;
-								font-family: $ubuntu;
-								font-size: 15px;
-								font-weight: normal;
-								left: 4px;
-
-							}
+							border: 0;
+							background: $verde;
+							-webkit-box-shadow: -3px 0 35px rgba(0,0,0,0.4);
+							-moz-box-shadow: -3px 0 35px rgba(0,0,0,0.4);
+							box-shadow: -3px 0 35px rgba(0,0,0,0.4);
+							font-family: $ubuntu;
+							font-weight: normal;
+							letter-spacing: -1px;
 
 							&:first-child{
-								// width: 160px;
-								border-left:0; 
-
+								-webkit-box-shadow: none;
+								-moz-box-shadow: none;
+								box-shadow: none;
+								h5{top: 11px;}
 								span{
-									-webkit-border-radius: 14px;
-									-moz-border-radius: 14px;
-									border-radius: 14px;
-									background:rgba(0,0,0,0.3);
-									color: #fff;
-									text-shadow:1px 1px 0 #000;
-									padding: 1px 8px;
-									font-size: 14px;
-									float: left;
+									padding: 1px 7px;
+									background: rgba(0,0,0, 0.3);
+									-webkit-border-radius: 11px;
+									-moz-border-radius: 11px;
+									border-radius: 11px;
 									position: relative;
-									top: -21px;
-									right: -29px;
+									top: 11px;
+									color: #fff;
+									font-weight: normal;
 								}
 							}
 
 							&:hover{
-								.spriteDestaque{
-									@include opacityCB(8);
-								}
+								background: #79b719;
+							}
+						
+							
+							.spriteDestaque, h5{
+								@include opacityCB(4);
+							}
 
-								h5{//color: #35421d;
-									color: rgba(0,0,0,0.7)
-								}
+							h5{
+								position: relative;
+								top: 15px;
+							}
 
+							&.active{
+								background: #598913;
+								h5{color: #fff;}
 							}
 						}
 					}
+					
+					// #barDestaque{
+					// 	width: 100%;
+					// 	background:$verde;
+					// 	height: 65px;
+					// 	float: left;
+
+					// 	.btnDestaque{
+					// 		width: 127px;
+					// 		height: 59px;
+					// 		float: left;
+					// 		border: none; 
+					// 		background:none; 
+					// 		@include opacityCB(4);
+							
+					// 		&:hover{
+					// 			@include opacityCB(8);
+					// 		}
+
+					// 		&.active{
+					// 			@include opacityCB(8);
+					// 		}
+
+					// 		&:first-child{ width: 129px}
+					// 		&:nth-child(2){ width: 170px}
+					// 		&:nth-child(3){ width: 134px}
+					// 		&:nth-child(4){ width: 129px}	
+					// 		&:last-child{
+					// 			width: 145px;
+					// 		}						
+
+					// 		h5{ 
+					// 			float: left;
+					// 			position: relative;
+					// 			top: 19px;
+					// 			font-family: $ubuntu;
+					// 			font-size: 15px;
+					// 			font-weight: normal;
+					// 			left: 4px;
+
+					// 		}
+
+					// 		&:first-child{
+					// 			// width: 160px;
+					// 			border-left:0; 
+					// 			h5{top: 23px;}
+					// 			span{
+					// 				-webkit-border-radius: 14px;
+					// 				-moz-border-radius: 14px;
+					// 				border-radius: 14px;
+					// 				@include opacityCB(10);
+					// 				background:rgba(0,0,0,0.3);
+					// 				color: #fff;
+					// 				font-weight: bold;
+					// 				// text-shadow:1px 1px 0 #000;
+					// 				padding: 1px 8px;
+					// 				font-size: 14px;
+					// 				float: left;
+					// 				position: relative;
+					// 				top: -18px;
+					// 				right: -29px;
+					// 			}
+					// 		}
+
+					// 	}
+					// }
 				}
 
 
