--- a/css/index.scss
+++ b/css/index.scss
@@ -64,6 +64,15 @@ body{
 		margin-top: 3px;
 	}
 
+
+	#ajaxLoading{
+		width: 100%;
+		height: 32px;
+		background: url(../images/ajax-loader.gif) center center no-repeat transparent;
+		background-color: none;
+
+	}
+
 	#all{
 		width: 100%;
 		height: auto;
@@ -78,7 +87,7 @@ body{
 				border-bottom: 3px solid #232323;
 				display: block;
 				position: fixed;
-				z-index: 10;
+				z-index: 100000;
 
 				#logo{
 					background: url(../images/marca.png) no-repeat;
@@ -176,15 +185,15 @@ body{
 					background-position: -154px 0 ;
 				}
 
-				&.turismo{
+				&.categoria18{
 					background-position: 0 0;
 				}
 
-				&.esportes{
+				&.categoria6{
 					background-position: -31px 0;
 				}
 
-				&.informatica{
+				&.categoria13{
 					background-position: -72px 0;
 				}
 
@@ -392,8 +401,8 @@ body{
 							&.roupas{ background: #DF1A49; }
 							&.praia{ background: #791eb6 ; }
 							&.informativo{ background: $verde; }
-							&.turismo{ background: #ffc424; }
-							&.esporte{ background: #00A550; }
+							&.categoria18{ background: #ffc424; }
+							&.categoria6{ background: #00A550; }
 
 						}
 
@@ -486,7 +495,7 @@ body{
 							}
 
 							&.active{
-								background: #598913;
+								background: #446a0e;
 								h5{color: #fff;}
 							}
 						}
@@ -559,7 +568,7 @@ body{
 					// }
 				}
 
-
+	
 				#oferta{
 					.imgOferta{
 						max-width: 450px;
@@ -630,116 +639,173 @@ body{
 				padding-bottom: 40px;
 				display: table;
 				width: 960px;
-				.loadingImage{
-					width: 100%;
-					height: 70px;
-					background: url(../images/ajax-loader.gif) center no-repeat;
-				}
 				
-				a.ofertaUnique{
-					float: left;
-					width: 228px;
-					height: 270px;
-					background:#b2b2b2;
-					margin: 15px 15px 0 0;
-					border-top: 5px solid ;
-					color: #333;
-					position: relative;
+				.groupOfertas{
+					height: auto;
+					display: table;
 
-					&:last-child{margin: 15px 0;}
-					&:hover{ text-decoration: none;	}
-					
-
-					&.roupas{ border-color: #DF1A49; }
-					&.praia{ border-color:#791eb6 ; }
-					&.informativo{ border-color: #333; }
-					&.turismo{ border-color: #ffc424; }
-					&.esporte{ border-color: #00A550; }
-
-					
-					.imageOferta{
-						width: 228px;
-						height: 228px;
-
-						img{
-							position: relative;
-							z-index: 3;
-						}
-
-						.desc{
-							width: 208px;
-							height: 208px;
-							position: relative;
-							top: -228px;
-							z-index: 5;
-							padding: 10px;
-							color: #fff;
-
-							h5{
-								text-align: center;
-								font-size: 21px;
-								text-shadow: 2px 2px 0 rgba(0,0,0,0.3);
-							}
-							h6{
-								font-weight: normal;
-								text-align: center;
-								
-							}
-
-							&.roupas{ background: #DF1A49; }
-							&.praia{ background: #791eb6 ; }
-							&.informativo{ background: $verde; }
-							&.turismo{ background: #ffc424; }
-							&.esporte{ background: #00A550; }
-						}
+					.loadingImage{
+						width: 100%;
+						height: 70px;
+						background: url(../images/ajax-loader.gif) center no-repeat;
 					}
 
-					.bottomBar{
-						width: 100%;
-						height: 53px;
+					
+					a.ofertaUnique{
+						float: left;
+						width: 228px;
+						height: 270px;
+						background:#b2b2b2;
+						margin: 15px 6px 0;
+						border-top: 5px solid ;
+						color: #333;
 						position: relative;
-						z-index: 10;
-						background: #333;
-						bottom: 0;
-						top: -11px;
-						display: table;
+
 						
-						img{
+						&:hover{ text-decoration: none;	}
+						
+
+						
+						&.categoria1{ border-color: #ff5c42; } //alimentos
+						&.categoria2{ border-color: #5d2bff; } //sapatos
+						&.categoria3{ border-color: #0e64e7; } //moda masculina
+						&.categoria4{ border-color: #ff4690; } //moda feminina
+						&.categoria5{ border-color: #ff5efe; } //moda infantil
+						&.categoria6{ border-color: #00A550; } //esportes/fitness
+						&.categoria7{ border-color: #32d89b; } //decoracao
+						&.categoria8{ border-color: #629fff; } //cama/mesa/banho
+						&.categoria9{ border-color: #ff660c; } //entretenimento
+						&.categoria10{ border-color: $verde; } //servicos
+						&.categoria11{ border-color: #daa900; } //joias
+						&.categoria12{ border-color: #008199; } //eletro/eletronicos
+						&.categoria13{ border-color: #2e4c92; } //informatica
+						&.categoria14{ border-color: #566792 } //livraria/papelaria
+						&.categoria15{ border-color: #c1000f; } //farmacia
+						&.categoria16{ border-color: #560acd; } //perfumes, cosmeticos
+						&.categoria17{ border-color: #797979; } //informativo
+						&.categoria18{ border-color: #ffc424; } //turismo
+						&.categoria19{ border-color: #7498ff; } //jogos, brinquedos
+
+						
+						
+						.imageOferta{
 							width: 228px;
 							height: 228px;
-						}
 
-						.btnBar{
-							background:url(../images/sprite-mini.png) no-repeat;
-							width: 32px;
-							height: 32px;
-							float: left;
-							border: 0;
-							margin: 4px 5px;
-							padding-right: 2px;
-							@include opacityCB(2);
-							border-right: 1px solid #5b5b5b;
-
-							&:last-child{ border: 0;}
-
-							&:hover{
-								@include opacityCB(10);								
+							img{
+								position: relative;
+								z-index: 3;
 							}
 
-							&.like{background-position: 0 0}
+							.desc{
+								width: 208px;
+								height: 208px;
+								position: relative;
+								// top: -228px;
+								top: -71px; //TEMPORARIO
+								z-index: 5;
+								padding: 10px;
+								color: #fff;
+								@include opacityCB(0);
+								transition: opacity .25s ease-in-out;
+								-moz-transition: opacity .25s ease-in-out;
+								-webkit-transition: opacity .25s ease-in-out;
 
-							&.dislike{background-position: -33px 0;}
+								h5{
+									text-align: center;
+									font-size: 21px;
+									text-shadow: 1px 1px 0 rgba(0,0,0,0.3);
+									line-height: 26px;
+								}
+								h6{
+									font-weight: normal;
+									text-align: center;
+									font-size: 14px;
+									
+								}
 
-							&.share{background-position: -65px 0; width: 39px;}
+								&.categoria1{ background: #ff5c42; } //alimentos
+								&.categoria2{ background: #5d2bff; } //sapatos
+								&.categoria3{ background: #0e64e7; } //moda masculina
+								&.categoria4{ background: #ff4690; } //moda feminina
+								&.categoria5{ background: #ff5efe; } //moda infantil
+								&.categoria6{ background: #00A550; } //esportes/fitness
+								&.categoria7{ background: #32d89b; } //decoracao
+								&.categoria8{ background: #629fff; } //cama/mesa/banho
+								&.categoria9{ background: #ff660c; } //entretenimento
+								&.categoria10{ background: $verde; } //servicos
+								&.categoria11{ background: #daa900; } //joias
+								&.categoria12{ background: #008199; } //eletro/eletronicos
+								&.categoria13{ background: #2e4c92; } //informatica
+								&.categoria14{ background: #566792 } //livraria/papelaria
+								&.categoria15{ background: #c1000f; } //farmacia
+								&.categoria16{ background: #560acd; } //perfumes, cosmeticos
+								&.categoria17{ background: #797979} //informativo
+								&.categoria18{ background: #ffc424; } //turismo
+								&.categoria19{ background: #7498ff; } //jogos, brinquedos
 
-							&.favorite{background-position: -107px 0; width: 39px;}
-							
-							&.pin{background-position: -226px 0;}
+								&:hover{ @include opacityCB(10); } 
+							}
 						}
+
+						.bottomBar{
+							width: 228px;
+							height: 40px;
+							padding: 5px 0px 0 0px;
+							position: relative;
+							z-index: 10;
+							background: #333;
+							bottom: 0;
+							// top: -11px;
+							display: table;
+							
+							img{
+								width: 228px;
+								height: 228px;
+							}
+							
+							.innerLine{
+								height: 80%;
+								margin: 0 8px;
+							}
+
+							.btnBar{
+								background:url(../images/sprite-mini.png) no-repeat;
+								width: 32px;
+								height: 32px;
+								float: left;
+								border: 0;
+								padding: 2px;
+								@include opacityCB(2);
+								transition: opacity .25s ease-in-out;
+								-moz-transition: opacity .25s ease-in-out;
+								-webkit-transition: opacity .25s ease-in-out;
+								
+								&:first-child{ margin-left: 10px; }
+
+								&:last-child{ border: 0;}
+
+								&:hover{
+									@include opacityCB(10);								
+								}
+
+								&.like{background-position: 0 0; width: 26px;}
+
+								&.dislike{background-position: -33px 0;width: 26px;}
+
+								&.share{background-position: -65px 0; width: 30px;}
+
+								&.favorite{background-position: -107px 0; width: 34px;}
+								
+								&.comment{background-position: -148px 0; width: 34px;}
+
+								&.pin{background-position: -226px 0; width: 26px;}
+							}
+						}
+
+					
+
 					}
-
-				
-
 				}
 
 			}
