--- a/css/index.scss
+++ b/css/index.scss
@@ -33,21 +33,6 @@ html,body{height: 100%;}
 body{
 	margin: 0 auto;
 	padding: 0;
-	min-height: 600px;
-	background-image: linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
-	background-image: -o-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
-	background-image: -moz-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
-	background-image: -webkit-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
-	background-image: -ms-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
-	background: #EDEDED;
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		left top,
-		color-stop(0.28, rgb(237,237,237)),
-		color-stop(0.64, rgb(247,247,247)),
-		color-stop(0.87, rgb(255,255,255))
-	);
 	
 	p,h1,h2,h3,h4,h5,span{padding: 0;margin: 0;}
 
@@ -80,6 +65,20 @@ body{
 		width: 100%;
 		height: auto;
 		
+		background-image: linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+		background-image: -o-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+		background-image: -moz-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+		background-image: -webkit-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+		background-image: -ms-linear-gradient(bottom, rgb(237,237,237) 28%, rgb(247,247,247) 64%, rgb(255,255,255) 87%);
+		background: #EDEDED;
+		background-image: -webkit-gradient(
+			linear,
+			left bottom,
+			left top,
+			color-stop(0.28, rgb(237,237,237)),
+			color-stop(0.64, rgb(247,247,247)),
+			color-stop(0.87, rgb(255,255,255))
+		);
 		
 		#container{
 			min-height: 100%;
@@ -210,10 +209,10 @@ body{
 			}
 			// icons destaque buttons
 			.spriteDestaque{
-				width: 46px;
-				height: 57px;
 				float: left;
 				background: url(../images/sprite-interacao.png) no-repeat;
+				width: 46px;
+				height: 57px;
 				//@include opacityCB(4);
 
 				&.like{
@@ -708,8 +707,7 @@ body{
 								width: 208px;
 								height: 208px;
 								position: relative;
-								// top: -228px;
-								top: -71px; //TEMPORARIO
+								top: -228px;
 								z-index: 5;
 								padding: 10px;
 								color: #fff;
