--- a/css/index.scss
+++ b/css/index.scss
@@ -15,7 +15,7 @@ $esporte: #00A550;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$valor+'0')";
 
   /* IE 5-7 */
-  filter: alpha(opacity=$valor+'0');
+  filter: alpha(opacity=''+$valor+'0');
 
   /* Netscape */
   -moz-opacity: $valor*0.1;
@@ -255,8 +255,9 @@ body{
 
 
 			#firstContainer{
-				height: 350px;
+				height: auto;
 				margin: 135px 0 15px 0;
+				padding-bottom: 40px;
 
 
 				#paperFolding{
@@ -867,7 +868,7 @@ body{
 							
 							.innerLine{
 								height: 28px;
-								margin: 2px 8px;
+								margin: 2px 7px;
 							}
 
 							.btnBar{
@@ -898,9 +899,9 @@ body{
 
 								&.favorite{background-position: -107px 0; width: 34px;}
 								
-								&.comment{background-position: -148px 0; width: 34px;}
+								&.comment{background-position: -146px 0; width: 34px;}
 
-								&.reservar{background-position: -226px 0; width: 26px;}
+								&.reservar{background-position: -226px 0; width: 30px;}
 
 
 								
@@ -1367,3 +1368,56 @@ body{
 	-o-animation-name: pulse;
 	animation-name: pulse;
 }
+
+
+
+
+
+
+
+// shareThis
+
+// .shareThis .box{
+// float:left;
+// margin:5% 8% 0 8%;
+// width:100%;
+// }
+// .shareThis .box a{
+// color:#404040;
+// text-shadow: 0 1px 1px rgba(167,167,167,.4);
+// }
+// .shareThis .box a:hover{
+// text-decoration:none;
+// }
+// .shareThis .count {
+// font-weight:bold;
+// font-size:50px;
+// float:left;
+// border-right:2px solid #57b8d1;
+// line-height:40px;
+// padding-right:10px
+// }
+// .shareThis .share {
+// float:left;
+// margin-left:10px;
+// font-size:20px;
+// width:82px;
+// }
+// .shareThis .buttons {
+// position: absolute;
+// width:294px;
+// background-color:#fff;
+// border: 1px solid rgba(0,0,0,.2);
+// padding:10px;
+// -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
+// -moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
+// box-shadow: 0 1px 2px rgba(0,0,0,.1);
+// }
+// .shareThis .button {
+// float:left;
+// max-width:50px;
+// margin:0 10px 0 0;
+// }
+// .shareThis .facebook {
+// margin:0 4px 0 0;
+// }
