--- a/css/index.scss
+++ b/css/index.scss
@@ -35,6 +35,11 @@ body{
 	margin: 0 auto;
 	padding: 0;
 	
+	&.notLogged{
+		background: url(../images/dots.png);
+		min-height: 400px;
+	}
+
 	&:before{
 		content:"";
 		height:100%;
@@ -88,6 +93,12 @@ body{
 			color-stop(0.64, rgb(247,247,247)),
 			color-stop(0.87, rgb(255,255,255))
 		);
+
+		&.notLogged{
+			background: none;
+			background-image: none;
+			border-top: 4px solid $verde;
+		}
 		
 		#container{
 			min-height: 100%;
@@ -457,7 +468,7 @@ body{
 							text-shadow:1px 1px 1px #fff;
 						}
 						article.descOfertaDetalhe{
-							color: #666;
+							color: #818181;
 							text-shadow:1px 1px 1px #fff;
 							font-size: 13px;
 							margin-top: 16px;
@@ -656,7 +667,18 @@ body{
 						#barOferta{
 							width: 478px;
 							height: 50px;
-							background:#333;
+							background-color: rgb(65, 65, 65);
+							background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(128, 128, 128)), color-stop(100%, rgb(39, 39, 39)));
+							background-image: -webkit-linear-gradient(top, rgb(128, 128, 128), rgb(39,39,39));
+							background-image: -moz-linear-gradient(top, rgb(128, 128, 128), rgb(39, 39, 39));
+							background-image: -ms-linear-gradient(top, rgb(128, 128, 128), rgb(39, 39, 39));
+							background-image: -o-linear-gradient(top, rgb(128, 128, 128), rgb(39, 39, 39));
+							background-image: linear-gradient(top, rgb(128, 128, 128), rgb(39, 39, 39));
+							border: 1px solid rgb(75, 75, 75);
+							border-bottom: 1px solid rgb(5, 5, 5);
+							border-radius: 1px;
+							-webkit-box-shadow: inset 0 1px 0 0 rgb(94, 94, 94);
+							box-shadow: inset 0 1px 0 0 rgb(172, 172, 172);
 							float: right;
 							top: 15px;
 							position: relative;
@@ -733,10 +755,10 @@ body{
 
 			//lista de ofertas
 			section#listaOfertas{
-				margin-top: 15px;
 				border-top: 1px dotted #b2b2b2;
 				height: auto;
-				padding-bottom: 40px;
+				position: relative;
+				top: 14px;
 				display: table;
 				width: 960px;
 				padding-bottom: 190px;
@@ -915,6 +937,255 @@ body{
 				}
 
 			}
+
+			#headerMain{
+				width: 960px;
+				height: 70px;
+				margin: 0 auto;
+				
+				#logo{
+					background: url(../images/marca.png) no-repeat;
+					float: left;
+					width: 293px;
+					height: 46px;
+					margin: 15px 5px;
+
+					span{
+						position: relative;
+						top: 41px;
+						color: rgb(151, 151, 151);
+						float: right;
+					}
+				}
+			}
+
+			#banner{
+				width: 960px;
+				height: 450px;
+				background:url(../images/banner.jpg) no-repeat center center;
+				margin: 0 auto;
+				color: #fff;
+				display: table;
+				
+
+				h2,h3{
+					text-align: left;
+					font-family: $ubuntu;
+					text-shadow: 1px 1px 1px #000;
+				}
+
+				h2{ margin: 40px 0 0 20px; font-size: 36.5px;}
+
+				h3{margin: 9px 0 0 20px ;font-size: 29.5px;}
+
+				.getAndroid{
+					width: 190px;
+					color: #fff;
+					font-size: 18px;
+					text-align: center;
+					padding: 15px 10px;
+					background:#3fc957;
+					border: none;
+					-webkit-border-radius: 4px;
+					-moz-border-radius: 4px;
+					border-radius: 4px;
+					margin-top: 60px;
+					margin-left: 32px;
+					text-shadow: 1px 1px 1px rgb(57, 175, 77);
+					transition: all .45s ease-in-out;
+					-moz-transition: all .45s ease-in-out;
+					-webkit-transition: all .45s ease-in-out;
+
+					&:hover{
+						background: #3dcf57;
+						-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.4);
+						-moz-box-shadow: 0 0 30px rgba(0,0,0,0.4);
+						box-shadow: 0 0 30px rgba(0,0,0,0.4);
+
+					}
+
+				}
+
+
+			}
+			
+
+			// home page, hotsite, presentation, login, etc
+			#leftMain{
+				width: 540px;
+				float: left;
+				
+
+			}
+			#rightMain{
+				width: 400px;
+				height: auto;
+				float: left;
+				min-height: 420px;
+				font-family: $ubuntu;
+				margin-left: 20px;
+
+				h3{
+					font-size: 19px;
+					width: 222px;
+					float: left;
+					color: #b1b1b1;
+					text-shadow: 1px 1px 1px #fff;
+					margin-left: 69px;
+					text-align: center;
+					line-height: 27px;
+					margin-top: 4px;
+
+				}
+
+				#galaxy{
+					width: 380px;
+					height: 420px;
+					background: url(../images/galaxy.png) no-repeat center center;
+					float: left;
+
+					img{
+						position: relative;
+						top: 408px;
+						left: 98px;
+					}
+				}
+
+				#iphone{
+					width: 380px;
+					height: 450px;
+					background:url(../images/iphone.png) no-repeat center center;
+					float: left;
+
+					h2{
+						width: 143px;
+						position: relative;
+						top: 231px;
+						left: 115px;
+						float: left;
+						text-align: center;
+						color: rgb(128,128,128);
+						font-size: 37px;
+					}
+				}
+			}
+
+			.btn-auth {
+			    position: relative;
+			    display: inline-block;
+			    height: 22px;
+			    padding: 0 1em;
+			    border: 1px solid #999;
+			    border-radius: 2px;
+			    margin: 0;
+			    text-align: center;
+			    text-decoration: none;
+			    font-size: 14px;
+			    line-height: 22px;
+			    white-space: nowrap;
+			    cursor: pointer;
+			    color: #222;
+			    background: #fff;
+			    -webkit-box-sizing: content-box;
+			    -moz-box-sizing: content-box;
+			    box-sizing: content-box;
+			    /* iOS */
+			    -webkit-appearance: none; /* 1 */
+			    /* IE6/7 hacks */
+			    *overflow: visible;  /* 2 */
+			    *display: inline; /* 3 */
+			    *zoom: 1; /* 3 */
+			    font-family: $ubuntu;
+			}
+
+			.btn-auth:hover,
+			.btn-auth:focus,
+			.btn-auth:active {
+			    color: #222;
+			    text-decoration: none;
+				background: #718dc9;
+			}
+
+			.btn-auth:before {
+			    content: "";
+			    float: left;
+			    width: 22px;
+			    height: 22px;
+			    background: url(../images/auth-icons.png) no-repeat 99px 99px;
+			}
+
+			/*
+			 * 36px
+			 */
+
+			.btn-auth.large {
+			    height: 36px;
+			    line-height: 36px;
+			    font-size: 20px;
+				float: right;
+				margin: 20px 0 0 0;
+			}
+
+			.btn-auth.large:before {
+			    width: 36px;
+			    height: 36px;
+			}
+
+			/*
+			 * Remove excess padding and border in FF3+
+			 */
+
+			.btn-auth::-moz-focus-inner {
+			    border: 0;
+			    padding: 0;
+			}
+
+
+			/* Facebook (extends .btn-auth)
+			   ========================================================================== */
+
+			.btn-facebook {
+			    border-color: #29447e;
+			    border-bottom-color: #1a356e;
+			    color: #fff;
+			    background-color: #5872a7;
+			    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#637bad), to(#5872a7));
+			    background-image: -webkit-linear-gradient(#637bad, #5872a7);
+			    background-image: -moz-linear-gradient(#637bad, #5872a7);
+			    background-image: -ms-linear-gradient(#637bad, #5872a7);
+			    background-image: -o-linear-gradient(#637bad, #5872a7);
+			    background-image: linear-gradient(#637bad, #5872a7);
+			    -webkit-box-shadow: inset 0 1px 0 #879ac0;
+			    box-shadow: inset 0 1px 0 #879ac0;
+			}
+
+			.btn-facebook:hover,
+			.btn-facebook:focus {
+			    color: #fff;
+			    
+			}
+
+			.btn-facebook:active {
+			    color: #fff;
+			    background: #4f6aa3;
+			    -webkit-box-shadow: inset 0 1px 0 #45619d;
+			    box-shadow: inset 0 1px 0 #45619d;
+			}
+
+			/*
+			 * Icon
+			 */
+
+			.btn-facebook:before {
+			    border-right: 1px solid #465f94;
+			    margin: 0 1em 0 -1em;
+			    background-position: 0 0;
+			}
+
+			.btn-facebook.large:before {
+			    background-position: 0 -22px;
+			}
+
 		} //container
 
 
@@ -929,11 +1200,20 @@ body{
 		height: 110px;
 		clear:both;
 		background: $verde;
-		top: 40px;
+		top: 54px;
 	}
 
 
+	// main page, not logged
+
+
+
 }
+
+
+
+
+
 
 
 
