--- a/css/index.scss
+++ b/css/index.scss
@@ -961,9 +961,9 @@ body{
 
 			#banner{
 				width: 960px;
-				height: 450px;
-				background:url(../images/banner.jpg) no-repeat center center;
-				margin: 0 auto;
+				height: 430px;
+				background: url(../images/dot.png), url(../images/banner.jpg) no-repeat center center;
+				margin: 20px auto;
 				color: #fff;
 				display: table;
 				
@@ -979,15 +979,16 @@ body{
 				h3{margin: 9px 0 0 20px ;font-size: 29.5px;}
 
 				.getAndroid{
-					width: 190px;
+					width: 290px;
 					color: #fff;
 					font-size: 18px;
 					text-align: center;
 					padding: 15px 10px;
-					background:#3fc957;
-					border: none;
+					background:#5cb85c;
+					border: 1px solid ;
 					-webkit-border-radius: 4px;
 					-moz-border-radius: 4px;
+					border-color: #5cb85c;
 					border-radius: 4px;
 					margin-top: 60px;
 					margin-left: 32px;
@@ -995,12 +996,36 @@ body{
 					transition: all .45s ease-in-out;
 					-moz-transition: all .45s ease-in-out;
 					-webkit-transition: all .45s ease-in-out;
+					-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.4);
+					-moz-box-shadow: 0 0 30px rgba(0,0,0,0.4);
+					box-shadow: 0 0 30px rgba(0,0,0,0.4);
+					span{
+						width: auto;
+						float: left;
+						position: relative;
+						top: 15px;
+					}
+					img{
+						float: left;
+						width: auto;
+						height: 48px;
+						margin-left: 8px;
+						transition: opacity .25s ease-in-out;
+						-moz-transition: opacity .25s ease-in-out;
+						-webkit-transition: opacity .25s ease-in-out;
+						@include opacityCB(4);
+					}
 
 					&:hover{
-						background: #3dcf57;
-						-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.4);
-						-moz-box-shadow: 0 0 30px rgba(0,0,0,0.4);
-						box-shadow: 0 0 30px rgba(0,0,0,0.4);
+						background-color: #4cae4c;
+						border-color: #449d44;
+
+						img {
+							@include opacityCB(10); 
+
+							 
+							//&:nth-child(2){@include opacityCB(4);}
+						}
 
 					}
 
