Nothing to do here :/

--- a/css/index.scss
+++ b/css/index.scss
@@ -31,6 +31,14 @@ $esporte: #00A550;
 
 html,body{height: 100%;}
 
+::selection {
+	background: $verde; /* Safari */
+	}
+::-moz-selection {
+	background: $verde; /* Firefox */
+}
+
+
 body{
 	margin: 0 auto;
 	padding: 0;
@@ -938,6 +946,17 @@ body{
 
 			}
 
+
+		} //container
+
+		// main.php
+		.container{
+			width: 960px;
+			min-height: 100%;
+			.central{
+				overflow: auto;
+				padding-bottom: 45px;
+			}
 			#headerMain{
 				width: 960px;
 				height: 70px;
@@ -958,8 +977,7 @@ body{
 					}
 				}
 			}
-
-			#banner{
+			.banner{
 				width: 960px;
 				height: 430px;
 				background: url(../images/dot.png), url(../images/banner.jpg) no-repeat center center;
@@ -967,6 +985,18 @@ body{
 				color: #fff;
 				display: table;
 				
+				&.second{
+					// background: url(../images/dot.png),url(../images/dot.png), url(../images/banner2.jpg) no-repeat center center;
+					background: none;
+
+					.devices{
+						float: right;
+						height: 226px;
+						background: url(../images/devices.png) no-repeat center center;
+						width: 400px;
+					}
+
+				}
 
 				h2,h3{
 					text-align: left;
@@ -978,54 +1008,75 @@ body{
 
 				h3{margin: 9px 0 0 20px ;font-size: 29.5px;}
 
-				.getAndroid{
-					width: 290px;
+				.getButton{
+					width: 250px;
 					color: #fff;
 					font-size: 18px;
 					text-align: center;
-					padding: 15px 10px;
-					background:#5cb85c;
-					border: 1px solid ;
-					-webkit-border-radius: 4px;
-					-moz-border-radius: 4px;
-					border-color: #5cb85c;
-					border-radius: 4px;
-					margin-top: 60px;
-					margin-left: 32px;
-					text-shadow: 1px 1px 1px rgb(57, 175, 77);
+					padding: 5px 10px;
+					color: #fff;
+					height: 50px;
+					-webkit-box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+					-moz-box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+					box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+					text-shadow: 1px 1px 0 #3b3b3b;
+					background: #2cb73f;
+					border: 1px solid #207028;
+					border-bottom-width: 4px;
+					margin: 40px 20px;
 					transition: all .45s ease-in-out;
 					-moz-transition: all .45s ease-in-out;
 					-webkit-transition: all .45s ease-in-out;
-					-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.4);
-					-moz-box-shadow: 0 0 30px rgba(0,0,0,0.4);
-					box-shadow: 0 0 30px rgba(0,0,0,0.4);
+					float: left;
+					margin-right: 500px;
+
+					&.apple{ 
+						margin-top: -6px;
+						background: #7e7e7e;
+						float: left; 
+						border: 1px solid #303233;
+						border-bottom: 4px solid #323436;
+
+						&:hover{
+							background: #494d4f;
+						}
+
+						span{
+							top: 7px;
+						}
+					}
+
 					span{
 						width: auto;
 						float: left;
 						position: relative;
-						top: 15px;
+						top: 1px;
 					}
-					img{
-						float: left;
-						width: auto;
-						height: 48px;
-						margin-left: 8px;
-						transition: opacity .25s ease-in-out;
-						-moz-transition: opacity .25s ease-in-out;
-						-webkit-transition: opacity .25s ease-in-out;
-						@include opacityCB(4);
+
+					h6{
+						font-family: Arial;
+						font-size: 9px;
+						color: rgba(0,0,0,0.4);
+						text-shadow: none;
+						text-align: left;
 					}
+
+					div{
+						width: 41px;
+						height: 40px;
+						float: right;
+					}
+
+					.androidIcon{
+						background:url(../images/os-icons.png) 0 -1px no-repeat ;
+					}	
+					.appleIcon{
+						background:url(../images/os-icons.png) -47px -1px no-repeat ;
+					}
+					
 
 					&:hover{
-						background-color: #4cae4c;
-						border-color: #449d44;
-
-						img {
-							@include opacityCB(10); 
-
-							 
-							//&:nth-child(2){@include opacityCB(4);}
-						}
+						background: rgb(37, 168, 55);
 
 					}
 
@@ -1149,6 +1200,9 @@ body{
 			    font-size: 20px;
 				float: right;
 				margin: 20px 0 0 0;
+			    transition: all .45s ease-in-out;
+				-moz-transition: all .45s ease-in-out;
+				-webkit-transition: all .45s ease-in-out;
 			}
 
 			.btn-auth.large:before {
@@ -1210,8 +1264,7 @@ body{
 			.btn-facebook.large:before {
 			    background-position: 0 -22px;
 			}
-
-		} //container
+		} // .container
 
 
 		// .pushFooter{height: 150px;}
@@ -1226,6 +1279,14 @@ body{
 		clear:both;
 		background: $verde;
 		top: 54px;
+	}
+
+	#footerMain{
+		width: 100%;
+		height: 45px;
+		background: $verde;
+		clear: both;
+		position: relative;
 	}
 
 
