--- a/css/index.scss
+++ b/css/index.scss
@@ -116,6 +116,57 @@ body{
 			
 		}
 		
+		form{
+			input, select, textarea {
+				border: 1px solid #ddd;
+			}
+			*{
+				// -moz-box-sizing: border-box;
+				// -webkit-box-sizing: border-box;
+				// box-sizing: border-box;
+			}
+			label{
+				&.select{
+					width: auto;
+					height: auto;
+					position: relative;
+					// border: 1px solid #000;
+					// border-bottom-width: 4px;
+
+
+					&:after{
+						position: absolute;
+						top: 50%;
+						right: 8px;
+						width: 0;
+						height: 0;
+						content: " ";
+						margin-top: -2px;
+						border-left: 4px solid transparent;
+						border-right: 4px solid transparent;
+						border-top: 4px solid #999;
+						pointer-events: none;
+					}
+				}
+				select{
+					padding-right: 20px;
+					display: inline-block;
+					margin: 0;
+					padding-left: 12px;
+					// padding: 7px 6px;
+					background-color: #fff;
+					color: #999;
+					border: 0;
+					outline: none;
+					-webkit-appearance: none;
+					-moz-appearance: none;
+					appearance: none;
+					cursor: pointer;
+				}
+			}//label
+
+		}
+
 		#container{
 			min-height: 100%;
 			height: auto !important;
@@ -153,7 +204,19 @@ body{
 					height: 78px;
 					border-top: 3px solid #3B5998;
 					
-					img {float: left;}
+					.imgLogin{
+						width: 55px;
+						height: 78px;
+						float: left;
+						
+						img {
+							float: left; 
+							max-width: 55px; 
+							max-height: 78px; 
+							width: auto;
+							height: auto;
+						}
+					}
 						
 					a.logout{
 						float: left;
@@ -163,42 +226,44 @@ body{
 						padding-left: 3px;
 					}
 
-					#profile{
-						width: 150px;
-						margin-left: 55px;
-						height: auto;
-						margin-top: -46px;
+					.profile{
+						width: 138px;
+						margin-left: 5px;
+						height: 78px;
 						float: left;
-						max-height: 40px;
 						
 						h6{
 							float: left;
-							width: 140px;
-							margin-left: 5px;
-							margin-top: 0;
-							font-size: 12px;
+							width: 138px;
+							font-size: 11px;
+							overflow: hidden;
 							color: #fff;
 							font-weight: normal;
 							letter-spacing: 1px;
+							padding: 0;
+							margin: 5px 0 1px 0;
 						}
 
-						i{
-					        float: left;
-					        @include opacityCB(4);
+						a{
+							margin: 0;
+							padding: 0;
+							font-size: 11px;
+							width: 138px;
+							float: left;
+							border-bottom: 1px solid rgb(46, 46, 46);
+							color: #fff;
+							padding-bottom: 2px;
+
+							i{ margin-right: 5px; padding-left: 3px;}
 						}
 					}
 
-					&:hover{
-						i{
-							@include opacityCB(10);
-						}
-					}
 				}
 				
 
 				#filter{
 					width: 100%;
-					height: 33px;
+					height: 38px;
 					background: $verde; 
 					position: relative;
 					z-index: 8;
@@ -207,6 +272,42 @@ body{
 					// -moz-box-shadow: 0 1px 2px rgb(0,0,0);
 					// box-shadow: 0 1px 2px rgb(0,0,0);
 					top: 2px;
+
+					form{
+						label{
+							width: 200px;
+							float: left;
+							height: auto;
+							margin: 4px 15px 0 0;
+
+							select{
+								padding-top: 0;
+								float: left;
+								width: 200px;
+							}
+						}
+
+						input{
+							width: 190px;
+							height: auto;
+							float: left;
+							outline: none;
+							border: 0;
+							margin: 4px 15px 0 0;
+							padding: 5px 25px 5px 9px;
+							-webkit-border-radius: 3px;
+							-moz-border-radius: 3px;
+							border-radius: 3px;
+							
+						}
+
+						i{
+							position: relative;
+							left: -36px;
+							top: 9px;
+							@include opacityCB(4);
+						}
+					}
 				}
 			}
 
@@ -802,7 +903,7 @@ body{
 						position: relative;
 						*{text-decoration: none;}
 
-						
+						&.hide{ display: none; }
 						&:hover{ text-decoration: none;	}
 						
 
@@ -889,15 +990,20 @@ body{
 						}
 
 						.bottomBar{
-							width: 228px;
-							height: 40px;
+							width: 226px;
+							height: 36px;
 							padding: 5px 0px 0 0px;
 							position: relative;
 							z-index: 10;
 							background: #333;
 							bottom: 0;
-							// top: -11px;
 							display: table;
+							border-bottom-color: rgb(27, 27, 27);
+							-webkit-box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+							-moz-box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+							box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.25);
+							border: 1px solid #000;
+							border-bottom-width: 4px;
 							
 							img{
 								width: 228px;
@@ -1494,6 +1600,29 @@ body{
 		background: $verde;
 		clear: both;
 		position: relative;
+
+		.menuFooter{
+			width: 700px;
+			height: auto;
+			float: left;
+
+			a{
+				color: #fff;
+				float: left;
+				margin: 8px 18px 0 18px;
+				font-family: $ubuntu;
+				font-size: 14px;
+				text-decoration: none;
+
+				&:hover{
+					text-decoration: underline;
+				}
+
+				&:first-child{
+					margin: 8px 18px 0 0;
+				}
+			}
+		}
 		
 	}
 
