--- a/css/index.scss
+++ b/css/index.scss
@@ -44,6 +44,11 @@ html,body{height: 100%;}
 	color: #fff;
 }
 
+.gecko, .ie {
+
+	select { padding-top: 5px !important; } 
+	input {padding: 7px 25px 7px 9px !important; }
+}
 
 body{
 	margin: 0 auto;
@@ -132,7 +137,17 @@ body{
 					position: relative;
 					// border: 1px solid #000;
 					// border-bottom-width: 4px;
-
+					&:before{
+						position: absolute;
+						right: 4px;
+						top: 2px;
+						content: " ";
+						display: block;
+						width: 20px;
+						height: 24px;
+						background: #486A0F;
+						pointer-events: none;
+					}
 
 					&:after{
 						position: absolute;
@@ -144,12 +159,13 @@ body{
 						margin-top: -2px;
 						border-left: 4px solid transparent;
 						border-right: 4px solid transparent;
-						border-top: 4px solid #999;
+						border-top: 4px solid #fff;
 						pointer-events: none;
 					}
 				}
 				select{
-					padding-right: 20px;
+					padding-right: 6px;
+					padding-top: 1px;
 					display: inline-block;
 					margin: 0;
 					padding-left: 12px;
@@ -162,6 +178,10 @@ body{
 					-moz-appearance: none;
 					appearance: none;
 					cursor: pointer;
+
+					option::selection{
+						background: $verde;
+					}
 				}
 			}//label
 
@@ -268,12 +288,25 @@ body{
 					position: relative;
 					z-index: 8;
 					border-bottom: 2px solid #82C018;
+					top: 2px;
+
 					// -webkit-box-shadow: 0 1px 2px rgb(0,0,0);
 					// -moz-box-shadow: 0 1px 2px rgb(0,0,0);
 					// box-shadow: 0 1px 2px rgb(0,0,0);
-					top: 2px;
-
-					form{
+					
+					::-webkit-input-placeholder { /* WebKit browsers */
+					    color:    #fff;
+					}
+					:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+					    color:    #fff;
+					}
+					::-moz-placeholder { /* Mozilla Firefox 19+ */
+					    color:    #fff;
+					}
+					:-ms-input-placeholder { /* Internet Explorer 10+ */
+					    color:    #fff;
+					}
+										form{
 						label{
 							width: 200px;
 							float: left;
@@ -284,7 +317,11 @@ body{
 								padding-top: 0;
 								float: left;
 								width: 200px;
+								background: #486A0F;
+								color: #fff;
 							}
+
+
 						}
 
 						input{
@@ -298,6 +335,8 @@ body{
 							-webkit-border-radius: 3px;
 							-moz-border-radius: 3px;
 							border-radius: 3px;
+							background: #486A0F;
+							color: #fff;
 							
 						}
 
